--- a/app/views/layouts/_main_sidebar.html.erb
+++ b/app/views/layouts/_main_sidebar.html.erb
@@ -80,6 +80,18 @@
             </a>
           </li>
         <% end %>
+
+        <% if @company.try(:is_sms_feature?) && can?(:read, :sms) %>
+          <li class="nav-item">
+            <a href="<%= sms_logs_path %>" class="nav-link">
+              <i class="nav-icon fas fa-comment"></i>
+              <p>
+                <%= t('common.sms_logs') %>
+              </p>
+            </a>
+          </li>
+        <% end %>
+
       </ul>
     </nav>
   </div>
