--- a/app/views/sms_logs/index.html.erb
+++ b/app/views/sms_logs/index.html.erb
@@ -3,14 +3,14 @@
     <div class="row mb-2">
       <div class="col-sm-6">
         <h1 class="m-0 text-dark">
-          <%= t('common.sms_logs') %>
+          <%= t('common.sms_notify') %>
         </h1>
       </div>
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
-          <li class="breadcrumb-item active"><%= t('common.sms_logs') %></li>
+          <li class="breadcrumb-item active"><%= t('common.sms_notify') %></li>
         </ol>
       </div>
     </div>
