コードの配置場所変更

--- a/app/views/company/sms_logs/edit.html.erb
+++ b/app/views/company/sms_logs/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', sms_log: @sms_log %>
 
 <%= link_to 'Show', @sms_log %> |
-<%= link_to 'Back', sms_logs_path %>
+<%= link_to 'Back', company_sms_logs_path %>
