--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
     <% end %>
     <% if @company.is_sms_feature? && can?(:read, :sms_logs) %>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="<%= sms_logs_path %>" class="nav-link"><%= t('common.sms_notify') %></a>
+        <a href="<%= company_sms_logs_path %>" class="nav-link"><%= t('common.sms_notify') %></a>
       </li>
     <% end %>
   </ul>
