--- a/app/views/company/sms_logs/show.html.erb
+++ b/app/views/company/sms_logs/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'Edit', edit_sms_log_path(@sms_log) %> |
-<%= link_to 'Back', sms_logs_path %>
+<%= link_to 'Back', company_sms_logs_path %>
