--- a/app/views/company/sms_logs/index.html.erb
+++ b/app/views/company/sms_logs/index.html.erb
@@ -17,42 +17,145 @@
   </div>
 </div>
 
+<%= form_with url: company_sms_logs_path, method: :post, local:true do |f| %>
 <section class="content">
-  <div class="card">
-    <div class="card-header">
-      <%= paginate @sms_logs %>
-    </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-7">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-title"><%= t('common.message_content') %></h3>
+          </div>
 
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-hover table-striped">
-          <thead>
-            <tr>
-              <th>日時</th>
-              <th>顧客</th>
-              <th>メッセージ</th>
-              <th>スタッフ</th>
-            </tr>
-          </thead>
+          <div class="card-body">
+            <div class="form-group">
 
-          <tbody>
-            <% @sms_logs.each do |sms_log| %>
-              <tr>
-                <td><%= sms_log.created_at.strftime("%y-%m-%d %H:%M") %></td>
-                <td><%= sms_log.customer.try(:name).to_s %></td>
-                <td><%= sms_log.message.to_s %></td>
-                <td><%= sms_log.staff.try(:id).to_s %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+              <%= f.text_area :message, { class: 'form-control', placeholder: t('common.input_message_prompt'), value: flash[:message].to_s, maxlength: 60, rows: 10, required: true } %>
+            </div>
+            <small><%= t('common.max_60_annotation') %></small>
+          </div>
+
+          <div class="card-footer">
+            <%= f.submit class: 'btn btn-primary', value: t('common.submit_button'), data: { confirm: t('common.submit_confirm'), disable_with: t('common.submit_disable_with') } %>
+            <a href="<%= customers_path %>" class="btn btn-default float-right"><%= t('common.return_link') %></a>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="card-footer">
-      <%= paginate @sms_logs %>
+      <div class="col-md-5">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-title"><%= t('common.target_customers') %></h3>
+            <div class="card-tools">
+              <span class="badge badge-success"><span id="customer_count"><%= @customers.size() %></span> 名</span>
+            </div>
+          </div>
+
+          <div class="card-body p-0">
+            <table class="table table-sm">
+              <thead>
+                <tr>
+                  <th style="width: 10px"><input type="checkbox" id="all_check_button" /></th>
+                  <%= javascript_tag do %>
+                    $(function() {
+                      $('#all_check_button').on('click', function(){
+                        $(':checkbox').prop('checked', $(this).is(':checked'));
+                        $('#customer_count').text($('.select_customer:checked').length);
+                      });
+
+                      $('.select_customer').on('input', function(){
+                        $('#customer_count').text($('.select_customer:checked').length);
+                      });
+                    });
+                  <% end %>
+
+                  <% if @company.is_input_customer_name? %>
+                    <th><%= Customer.human_attribute_name(:name) %></th>
+                  <% end %>
+
+                  <% if @company.is_input_customer_gender? %>
+                    <th><%= Customer.human_attribute_name(:gender) %></th>
+                  <% end %>
+
+                  <% if @company.is_input_customer_birthday? %>
+                    <th><%= Customer.human_attribute_name(:age) %></th>
+                  <% end %>
+
+                  <th><%= Customer.human_attribute_name(:last_vist_date) %></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @customers.each do |customer| %>
+                <tr>
+                  <td>
+                    <input type="checkbox" id="scales" name="customer_ids[]" value="<%= customer.id %>" class="select_customer" />
+                  </td>
+
+                  <% if @company.is_input_customer_name? %>
+                    <td><%= customer.name %></td>
+                  <% end %>
+
+                  <% if @company.is_input_customer_gender? %>
+                    <td>
+                      <% if customer.women? %>
+                        <i class="fas fa-venus text-red"></i>
+                      <% elsif customer.men? %>
+                        <i class="fas fa-mars text-black"></i>
+                      <% end %>
+                    </td>
+                  <% end %>
+
+                  <% if @company.is_input_customer_birthday? %>
+                    <td><%= customer.age %></td>
+                  <% end %>
+
+                  <td><%= customer.last_vist_date %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header">
+            <%= paginate @sms_logs %>
+          </div>
+
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-hover table-striped">
+                <thead>
+                  <tr>
+                    <th>日時</th>
+                    <th>顧客</th>
+                    <th>メッセージ</th>
+                    <th>スタッフ</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <% @sms_logs.each do |sms_log| %>
+                    <tr>
+                      <td><%= sms_log.created_at.strftime("%y-%m-%d %H:%M") %></td>
+                      <td><%= sms_log.customer.try(:name).to_s %></td>
+                      <td><%= sms_log.message.to_s %></td>
+                      <td><%= sms_log.staff.try(:id).to_s %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+          <div class="card-footer">
+            <%= paginate @sms_logs %>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
-
-
+<% end %>
